--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@ body {
 }
 
 /* Контейнер у хедері */
+.header {
+    border-bottom: 1px solid #e7e9fc; }
 
 .container {
     max-width: 1158px;
@@ -23,9 +25,8 @@ body {
 
 /* Навігація */
 .main-nav {
-    
-
-    
+    display: flex;
+    align-items: center;  
 }
 
 /* Логотип */
@@ -37,7 +38,7 @@ body {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
-    margin-left: 156px;
+    margin-right: 76px;
     text-decoration: none;
 }
 
@@ -48,8 +49,8 @@ body {
 /* Навігаційне меню */
 .nav-list {
     list-style: none;
-    
-    
+    display: flex;
+     gap: 40px;
     margin: 0;
      }
 
@@ -60,6 +61,7 @@ body {
     letter-spacing: 0.02em;
     color: #2e2f42;
     text-decoration: none;
+    padding: 24px 0;
 }
 
 .nav-list li:first-child .nav-link:hover,
@@ -73,7 +75,10 @@ body {
 }
 
 .address-list {
-   
+    display: flex;
+    gap: 40px;
+    list-style: none;
+     margin:0;  
 }
 
 .address-link {
@@ -394,3 +399,6 @@ display: flex;
     margin: 0;
    
 }
+
+img {
+    display: block; }
