--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,8 @@ display: flex;
     color: #ffffff;
     margin-bottom: 48px;
     max-width: 496px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .btn-order {
@@ -136,6 +138,8 @@ display: flex;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
     cursor: pointer;
     min-width: 169px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .btn-order:hover,
@@ -196,7 +200,13 @@ display: flex;
     position: absolute;
     width: 1px;
     height: 1px;
-     }
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden; }
 
 /* Team Section */
 .team {
