--- a/css/styles.css
+++ b/css/styles.css
@@ -278,6 +278,10 @@ display: flex;
     color: #434455;
     margin-bottom: 32px;
 }
+.team-info {
+    padding: 32px 0;
+    text-align: center;
+}
 
 /* Portfolio Section */
 
