--- a/css/styles.css
+++ b/css/styles.css
@@ -291,6 +291,8 @@ display: flex;
 .portfolio {
     background-color: #ffffff;
     color: #2e2f42;
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
 
 .section-title-portfolio {
@@ -367,6 +369,7 @@ display: flex;
      letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    display: inline-block;
 }
 
 .footer-logo-text {
