--- a/css/styles.css
+++ b/css/styles.css
@@ -249,18 +249,13 @@ display: flex;
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 1px 6px rgba(46, 47, 66, 0.08);
     text-align: center;
+    width: calc((100% - 72px) / 4);
 }
 
 .team-item img {
     display: block;
     width: 100%;
 }
-
-
- .team-item img {
-     display: block;
-     width: 100%; 
-    }
 
 .team-name {
     font-weight: 500;
@@ -291,8 +286,7 @@ display: flex;
 .portfolio {
     background-color: #ffffff;
     color: #2e2f42;
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding: 120px 0;
 }
 
 .section-title-portfolio {
@@ -345,15 +339,21 @@ display: flex;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    margin: 8px 16px 32px 16px;
+    
     font-family: "Roboto", sans-serif;
     font-weight: 400;
+    margin: 0;
 }
+ul {
+    padding-left: 0; 
+}
+
+   .container {
+   border: 1px solid #e7e9fc;     }
         
 .footer {
-    background-color: #2e2f42;
-     padding-top: 100px;
-    padding-bottom: 100px;       
+    background-color: #2e2f42; 
+    padding: 100px 0;
  }
     
        
