--- a/css/styles.css
+++ b/css/styles.css
@@ -380,6 +380,7 @@ ul {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    display: inline-block;
 }
 
 .footer-logo-accent {
