--- a/css/styles.css
+++ b/css/styles.css
@@ -369,7 +369,6 @@ ul {
      letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
-    display: inline-block;
 }
 
 .footer-logo-text {
@@ -380,7 +379,6 @@ ul {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
-    display: inline-block;
 }
 
 .footer-logo-accent {
@@ -434,4 +432,8 @@ ul {
 }
 
 img {
-    display: block; }
+    display: block;
+ }
+
+ .footer-logo-link {
+    display: inline-block;     }
