--- a/css/styles.css
+++ b/css/styles.css
@@ -356,20 +356,6 @@ ul {
     padding: 100px 0;
  }
     
-       
-
-.footer-logo {
-
-    margin-bottom: 16px;
-    text-decoration: none;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.17;
-     letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #4d5ae5;
-}
 
 .footer-logo-text {
     font-family: 'Raleway', sans-serif;
@@ -434,6 +420,15 @@ ul {
 img {
     display: block;
  }
-
- .footer-logo-link {
-    display: inline-block;     }
+ .footer-logo {
+     display: inline-block;
+     margin-bottom: 16px;
+     text-decoration: none;
+     font-family: 'Raleway', sans-serif;
+     font-weight: 700;
+     font-size: 18px;
+     line-height: 1.17;
+     letter-spacing: 0.03em;
+     text-transform: uppercase;
+     color: #4d5ae5;
+ }
