--- a/css/styles.css
+++ b/css/styles.css
@@ -420,7 +420,7 @@ ul {
 img {
     display: block;
  }
- .footer-logo {
+ .footer-logo-link {
      display: inline-block;
      margin-bottom: 16px;
      text-decoration: none;
