--- a/css/styles.css
+++ b/css/styles.css
@@ -335,6 +335,11 @@ display: flex;
 }
 
 .portfolio-text {
+    padding: 32px 16px;
+    margin: 0;
+     }
+
+.portfolio-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
