--- a/css/styles.css
+++ b/css/styles.css
@@ -303,13 +303,14 @@ display: flex;
 
 .portfolio-list {
     list-style: none;
-    margin: 0;
+     margin: 0;
     display: flex;
-     flex-wrap: wrap;
-    gap: 24px;
+    flex-wrap: wrap;
+     gap: 24px;
      padding: 0;
     justify-content: center;
-}
+    row-gap: 48px;
+    }
 
 .portfolio-card {
     margin-bottom: 48px;
@@ -335,20 +336,19 @@ display: flex;
 }
 
 .portfolio-text {
-    padding: 32px 16px;
-    margin: 0;
-     }
-
-.portfolio-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    
+    padding: 32px 16px;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
-    margin: 0;
 }
+
+.portfolio-item {
+    width: calc((100% - 48px) / 3); 
+}
+
 ul {
     padding-left: 0; 
 }
