--- a/css/styles.css
+++ b/css/styles.css
@@ -334,6 +334,9 @@ display: flex;
     color: #2e2f42;
     margin-bottom: 8px;
 }
+.portfolio-info {
+    padding: 32px 16px;
+ }
 
 .portfolio-text {
     font-size: 16px;
@@ -343,10 +346,15 @@ display: flex;
     padding: 32px 16px;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
+    margin: 0;
 }
 
 .portfolio-item {
     width: calc((100% - 48px) / 3); 
+}
+.portfolio-wrapper {
+    border: 1px solid #e7e9fc;
+    background-color: #ffffff; 
 }
 
 ul {
