--- a/css/styles.css
+++ b/css/styles.css
@@ -357,12 +357,12 @@ display: flex;
     background-color: #ffffff; 
 }
 
+.portfolio-first-card {
+    width: calc((100% - 48px) / 3); }
+
 ul {
     padding-left: 0; 
 }
-
-   .container {
-   border: 1px solid #e7e9fc;     }
         
 .footer {
     background-color: #2e2f42; 
