--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,15 @@ body {
     background-color: #ffffff;
     margin: 0;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
 
 /* Контейнер у хедері */
 .header {
@@ -343,7 +352,6 @@ display: flex;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    padding: 32px 16px;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     margin: 0;
@@ -357,7 +365,10 @@ ul {
     padding-left: 0; 
 }
 .container {
-    border: 1px solid #e7e9fc;}
+    max-width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
+    }
         
 .footer {
     background-color: #2e2f42; 
@@ -389,12 +400,6 @@ ul {
     font-size: 16px;
      margin-top: 16px;
 }
-
-.footer .container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
- }
 
 .nav-list {
     list-style: none;
