--- a/css/styles.css
+++ b/css/styles.css
@@ -359,7 +359,6 @@ display: flex;
 
 .portfolio-item {
     width: calc((100% - 48px) / 3); 
-    border: 1px solid #e7e9fc;
 }
 
 ul {
@@ -446,3 +445,7 @@ img {
      text-transform: uppercase;
      color: #4d5ae5;
  }
+
+ .portfolio-item>div {
+     border: 1px solid #e7e9fc;
+     }
