--- a/css/styles.css
+++ b/css/styles.css
@@ -359,7 +359,6 @@ display: flex;
 
 .portfolio-item {
     border: 1px solid #e7e9fc;
-    border-top: none;
     width: calc((100% - 48px) / 3); 
 }
 
@@ -447,3 +446,7 @@ img {
      text-transform: uppercase;
      color: #4d5ae5;
  }
+
+ .portfolio-item>div {
+     border: 1px solid #e7e9fc; 
+    border-top: none;}
